fix x overflow issue

--- a/src/app/assets/css/global.css
+++ b/src/app/assets/css/global.css
@@ -23,7 +23,8 @@ body {
 	background-color: var(--bg-primary);
 	color: var(--color-primary);
 
-	max-width: 1920px;
+	max-width: 100vw;
+	overflow-x: hidden;
 }
 
 code {
